@@ -1,4 +1,6 @@
 1.3.3
+- kreXX will now work without a writable chunks folder, but this will
+  require a much more memory.
 - Bugfix: No data from the Magento debug() function when uses as a
   configurable debug function.
 - Bugfix: String encoding detection now works as intended. This should
